--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="css/materialize.min.css" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#00897B" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/nav.css" />
   </head>
   <body>
     <!-- Navigasi -->
     <nav class="teal lighten-1" role="navigation">
       <div class="nav-wrapper container">
-        <a href="#" class="brand-logo" id="logo-container">My App</a>
+        <a href="#" class="brand-logo" id="logo-container">My Math</a>
         <a href="#" class="sidenav-trigger" data-target="nav-mobile">☰</a>
 
         <ul class="topnav right hide-on-med-and-down"></ul>
@@ -23,6 +26,7 @@
     <!-- Akhir Navigasi -->
     <div class="container" id="body-content"></div>
     <script src="js/materialize.min.js"></script>
+    <script src="js/home.js"></script>
     <script src="js/nav.js"></script>
     <script>
       // REGISTER SERVICE WORKER
