--- a/pages/home.html
+++ b/pages/home.html
@@ -1,2 +1,6 @@
-<h2>Selamat datang!</h2>
-<p>Selamat datang di laman aplikasi web progresif pertama saya.</p>
+<img src="../img/math.jpg" class="responsive-img banner-1"/>
+<div class="center-align container">
+  <h2>Selamat datang!</h2>
+  <p>Selamat datang di laman aplikasi matematika simple.</p>
+  <a class="waves-effect waves-light btn" href="#math" id="play-button"><i class="material-icons left">play_arrow</i>Mulai</a>
+</div>
