change style code

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,2 +1,11 @@
 <h2>Tentang Saya</h2>
-<p>Saya adalah programmer masa depan.</p>
+<div class="center-align">
+  <img
+    src="../img/author.jpg"
+    class="circle responsive-img z-depth-4"
+    width="150px"
+    height="150px"
+  />
+  <h5>Nama saya Iqbal baihaqi</h5>
+  <p>Saya adalah programmer masa depan.</p>
+</div>
