--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,2 +1,9 @@
 <h2>Hubungi Saya</h2>
-<p>Hubungi saya melalui email baihaqiiqbal323@gmail.com</p>
+<p>Hubungi saya :</p>
+<div
+  style="display: flex;
+align-items: center;"
+>
+  <i class="material-icons">email</i>
+  <p>baihaqiiqbal323@gmail.com</p>
+</div>
