--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,13 @@
-<img src="../img/math.jpg" class="responsive-img banner-1"/>
+<img src="../img/pwa.png" class="responsive-img banner-1" />
 <div class="center-align container">
   <h2>Selamat datang!</h2>
-  <p>Selamat datang di laman aplikasi matematika simple.</p>
-  <a class="waves-effect waves-light btn" href="#math" id="play-button"><i class="material-icons left">play_arrow</i>Mulai</a>
+  <p>Selamat datang di laman aplikasi pwa.</p>
+  <p>
+    Istilah Progressive Web App diperkenalkan oleh Alex Russel, salah seorang
+    Google Chrome engineer, dan Frances Berriman, desainer yang bekerja untuk
+    Google pada tahun 2015. Google mendefinisikan PWA sebagai berikut:
+    Progressive Web Apps use modern web capabilities to deliver an app-like user
+    experience. They evolve from pages in browser tabs to immersive, top-level
+    apps, maintaining the web's low friction at every moment.
+  </p>
 </div>
