--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/materialize.min.css" />
     <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#00897B" />
+    <meta name="theme-color" content="#00b0ff " />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/nav.css" />
   </head>
   <body>
     <!-- Navigasi -->
-    <nav class="teal lighten-1" role="navigation">
+    <nav class="light-blue accent-3" role="navigation">
       <div class="nav-wrapper container">
-        <a href="#" class="brand-logo" id="logo-container">My Math</a>
-        <a href="#" class="sidenav-trigger" data-target="nav-mobile">☰</a>
+        <a href="#" class="brand-logo" id="logo-container">PWA App</a>
+        <a href="#" class="sidenav-trigger" data-target="nav-mobile">  <i class="material-icons">dehaze</i></a>
 
         <ul class="topnav right hide-on-med-and-down"></ul>
         <ul class="sidenav" id="nav-mobile"></ul>
@@ -26,7 +26,6 @@
     <!-- Akhir Navigasi -->
     <div class="container" id="body-content"></div>
     <script src="js/materialize.min.js"></script>
-    <script src="js/home.js"></script>
     <script src="js/nav.js"></script>
     <script>
       // REGISTER SERVICE WORKER
