--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="My first PWA" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/materialize.min.css" />
+    <link rel="apple-touch-icon" href="/img/icon-192.png">
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#00b0ff " />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -25,24 +26,8 @@
     </nav>
     <!-- Akhir Navigasi -->
     <div class="container" id="body-content"></div>
+    <script src="js/reg_service_worker"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/nav.js"></script>
-    <script>
-      // REGISTER SERVICE WORKER
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", function() {
-          navigator.serviceWorker
-            .register("/service-worker.js")
-            .then(function() {
-              console.log("Pendaftaran ServiceWorker berhasil");
-            })
-            .catch(function() {
-              console.log("Pendaftaran ServiceWorker gagal");
-            });
-        });
-      } else {
-        console.log("ServiceWorker belum didukung browser ini.");
-      }
-    </script>
   </body>
 </html>
