--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -1,4 +1,20 @@
 <h1>Gallery</h1>
-<img class="responsive-img" src="../img/author.jpg" alt="" />
-<img class="responsive-img" src="../img/pwa.png" alt="" />
-<img class="responsive-img" src="../img/abstract.jpg" alt="" />
+<div class="row">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-image">
+        <img src="../img/author.jpg" />
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-image">
+        <img src="../img/pwa.png" />
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-image">
+        <img src="../img/abstract.jpg" />
+      </div>
+    </div>
+  </div>
+</div>
